// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionCustom /> handles click and keyDown 1`] = `
<li
  className="OptionCustomStyled-kanfKX cuOPdY"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if dense 1`] = `
<li
  className="OptionCustomStyled-kanfKX cuOPdY"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if disabled 1`] = `
<li
  className="OptionCustomStyled-kanfKX dEoLSp"
  disabled={true}
  selected={false}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if fullWidth 1`] = `
<li
  className="OptionCustomStyled-kanfKX cuOPdY"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if fullWidth and dense 1`] = `
<li
  className="OptionCustomStyled-kanfKX cuOPdY"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={false}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionCustom /> render correctly if selected 1`] = `
<li
  className="OptionCustomStyled-kanfKX lhHOKw"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  selected={true}
  tabIndex={0}
>
  
</li>
`;

exports[`<OptionsListCustom /> handles option click 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles option click 2`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 2`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 3`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> handles scroll, updates and unmounts 4`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop dense 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop fullWidth 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop fullWidth and dense 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<OptionsListCustom /> renders correctly if prop maxOptionsVisible 1`] = `
<ul
  className="OptionsListStyled-jMSBZg fHAHsG"
>
  <li
    className="OptionCustomStyled-kanfKX cuOPdY"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    selected={false}
    tabIndex={0}
  >
    text
  </li>
</ul>
`;

exports[`<SelectBox/> renders correctly if prop dense set 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-11"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iFjLQD"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP bCjLvm"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop disabled set 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={true}
        htmlFor="select-box-10"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp dJFgwn"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP hYkqpZ"
            disabled={true}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop fullWidth set 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-12"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gqRhyJ"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl jxdstS"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP gDFIMz"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop labelPosition set 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-13"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop labelPosition set 2`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu jAOIMC"
    >
      <label
        className="SelectBoxLabelStyled-XzebW jXTnLl"
        disabled={false}
        htmlFor="select-box-14"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop light set 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-15"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop message set text 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-8"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=custom 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-9"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-0"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and bordered 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW iNREMM"
        disabled={false}
        htmlFor="select-box-4"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP kIEKcd"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and colorScheme error 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW ecMFvx"
        disabled={false}
        htmlFor="select-box-3"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP dozpNQ"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and colorScheme success 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW dUOMof"
        disabled={false}
        htmlFor="select-box-2"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP bTPtFs"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and dense 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-7"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP ljOYNE"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and disabled 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={true}
        htmlFor="select-box-1"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP kmlCmz"
            disabled={true}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native and fullWidth 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-5"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP fmWmeL"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native, bordered and fullWidth 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-8"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP fgARUi"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly if prop type=native, fullWidth and dense 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-6"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP jGycpl"
            disabled={false}
            onChange={[Function]}
            value={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly option list in native mode 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-9"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={-1}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              Bar
            </option>
            <option
              disabled={true}
              value={1}
            >
              Foo
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBox/> renders correctly with default props 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-7"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and dense 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-3"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iFjLQD"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP bCjLvm"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and disabled 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={true}
        htmlFor="select-box-5"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp dJFgwn"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP hYkqpZ"
            disabled={true}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={true}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={true}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text and fullWidth 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-4"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gqRhyJ"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl jxdstS"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP gDFIMz"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text andcolorScheme set error 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW ecMFvx"
        disabled={false}
        htmlFor="select-box-1"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp fUHWMX"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP kOYTkp"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU eIbqx"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text andcolorScheme set success 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW dUOMof"
        disabled={false}
        htmlFor="select-box-0"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp ccJNvW"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP kOYTkp"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU gVNCHl"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly if prop message set text,dense and fullWidth 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-2"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gqRhyJ"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        text
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxCustom /> renders correctly with label, tooltip and message 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxCustomStyled-avmYQ gMzsAw"
    onClick={[Function]}
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-6"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          Foo
        </span>
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <button
          className="ButtonStyled-fMwQmp gOOcuo"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="ButtonTextStyled-abyTl iyrlOY"
          >
            text
          </span>
          <span
            className="ArrowIconStyled-jNctqP btvJvZ"
            disabled={false}
          >
            <div
              className="IconSvgStyled-cegYAl fAPHID"
              color=""
              rotate={0}
              size="normal"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10l5,5l5-5H7z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        FooBar
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> handles change 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-13"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly if set options and defaultValue 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-10"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly if set options and value 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-11"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          
        </span>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectBoxNative /> renders correctly with label, tooltip and message 1`] = `
<div
  className="SelectBoxStyled-koGuws jjuaOV"
>
  <div
    className="SelectBoxNativeStyled-iiICvc bAgLEt"
  >
    <div
      className="ContentBoxStyled-gwAfYu gJxIDp"
    >
      <label
        className="SelectBoxLabelStyled-XzebW hpTYyF"
        disabled={false}
        htmlFor="select-box-12"
      >
        <span
          className="SelectBoxLabelTextStyled-TMeHE kUGjhd"
        >
          Foo
        </span>
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </label>
      <div
        className="WrapperStyled-jvfqor VSdEY"
      >
        <div>
          <select
            className="SelectElementStyled-dOIIcP iWumtz"
            disabled={false}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={-1}
            >
              
            </option>
            <option
              disabled={false}
              value={0}
            >
              text
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="SelectBoxInfoBoxStyled-dHqPrF ksDdOk"
      disabled={false}
    >
      <div
        className="MessageStyled-jdtdZU jZokIS"
        disabled={false}
      >
        FooBar
      </div>
    </div>
  </div>
</div>
`;
